<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lyr.microfitwaist.home.NotiActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@color/colorPrimary">
        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_bar_home"
            android:scaleType="fitXY"
            android:background="#00000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/noti_title"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/noti_n"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:text="@string/noti_btn_n"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:background="@color/btn1"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="8dp"/>
            <Button
                android:id="@+id/noti_y"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:text="@string/noti_btn_y"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:background="@color/colorAccent"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/noti_n"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
