<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lyr.microfitwaist.home.EMSActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@color/colorPrimary">
        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/back"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_bar_back"
            android:scaleType="fitXY"
            android:background="#00000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/ems_title"
            android:layout_centerInParent="true"/>
        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ico_batt1"
            android:scaleType="fitXY"
            android:background="#00000000"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/effect01"
                    android:scaleType="centerCrop"
                    android:layout_centerInParent="true"/>
                <ImageButton
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:id="@+id/btn_play"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_play"
                    android:background="#00000000"
                    android:scaleType="fitXY"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20:35"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/btn_play"/>
            </RelativeLayout>

        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="7">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/ems_ds"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@color/ems_blue"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:background="@color/colorPrimary">
                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/progressbar_ds"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:max="100"
                        android:background="@color/colorPrimary"
                        android:layout_centerInParent="true"
                        android:progressDrawable="@drawable/progressbar"
                        android:progress="10"/>
                    <ImageButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_minus"
                        android:background="#00000000"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="24dp"
                        android:id="@+id/minus_ds"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10"
                        android:textColor="@color/white"
                        android:textSize="23sp"
                        android:layout_gravity="center"
                        android:id="@+id/txt_ds"/>
                    <ImageButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_plus"
                        android:background="#00000000"
                        android:layout_marginRight="24dp"
                        android:layout_gravity="right|center_vertical"
                        android:id="@+id/plus_ds"/>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/ems_blue"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="7">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/ems_dh"
                   android:textSize="12sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@color/ems_blue"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:background="@color/colorPrimary">
                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/progressbar_dh"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:max="100"
                        android:background="@color/colorPrimary"
                        android:layout_centerInParent="true"
                        android:progressDrawable="@drawable/progressbar"
                        android:progress="50"/>
                    <ImageButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_minus"
                        android:background="#00000000"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="24dp"
                        android:id="@+id/minus_dh"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50"
                        android:textColor="@color/white"
                        android:textSize="23sp"
                        android:layout_gravity="center"
                        android:id="@+id/txt_dh"/>
                    <ImageButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_plus"
                        android:background="#00000000"
                        android:layout_marginRight="24dp"
                        android:layout_gravity="right|center_vertical"
                        android:id="@+id/plus_dh"/>
                </FrameLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/ems_blue"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="7">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/ems_ha"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@color/ems_blue"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:background="@color/colorPrimary">
                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/progressbar_ha"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:max="100"
                        android:background="@color/colorPrimary"
                        android:layout_centerInParent="true"
                        android:progressDrawable="@drawable/progressbar"
                        android:progress="50"/>
                    <ImageButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_minus"
                        android:background="#00000000"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="24dp"
                        android:id="@+id/minus_ha"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50"
                        android:textColor="@color/white"
                        android:textSize="23sp"
                        android:layout_gravity="center"
                        android:id="@+id/txt_ha"/>
                    <ImageButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_plus"
                        android:background="#00000000"
                        android:layout_marginRight="24dp"
                        android:layout_gravity="right|center_vertical"
                        android:id="@+id/plus_ha"/>
                </FrameLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/ems_blue"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="7">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/ems_hb"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@color/ems_blue"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:background="@color/colorPrimary">
                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/progressbar_hb"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:max="100"
                        android:background="@color/colorPrimary"
                        android:layout_centerInParent="true"
                        android:progressDrawable="@drawable/progressbar"
                        android:progress="50"/>
                    <ImageButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_minus"
                        android:background="#00000000"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="24dp"
                        android:id="@+id/minus_hb"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50"
                        android:textColor="@color/white"
                        android:textSize="23sp"
                        android:layout_gravity="center"
                        android:id="@+id/txt_hb"/>
                    <ImageButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_plus"
                        android:background="#00000000"
                        android:layout_marginRight="24dp"
                        android:layout_gravity="right|center_vertical"
                        android:id="@+id/plus_hb"/>
                </FrameLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/ems_blue"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
